# serpapi-cpp

./: .gitignore  LICENSE  README.md  README.md.erb  Rakefile  meson.build  meson_options.txt
.github/workflows/: c-cpp.yml  ci.yml
example/: google_example.cpp  helper.cpp  helper.hpp  meson.build
oobt/: main.cpp  meson.build
src/: callback.cpp  callback.hpp  serpapi.cpp  serpapi.hpp
test/: test_main.cpp  test_serpapi.cpp  test_unit.cpp
